--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -47,8 +47,8 @@
 
 
     <!-- chart 1-->
-    <div >
-    	<h1 style="margin-left: 17%; padding: 10px 0;">IMPROVEMENT SCORES</h1>
+    <div style="border:1px solid black; padding: 10px 0;" >
+    	<h1 style="margin-left: 17%; ">IMPROVEMENT SCORES</h1>
     	<div class="chartDiv" style="margin-left: 30%">
     		<div id="improvementBarChart" style="width: 800px; height: 581px; margin: 10px 10px"></div>
     	</div>
