--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,7 @@
     <header>
       <nav>
 	<ul>
-	  <li><a id="leftHeaderli" href="/"><h1 id="leftHeader">Ment2Reach</h1></a></li>
+	  <li><a id="leftHeaderli" href="/"><h1 id="leftHeader">MENT2Reach</h1></a></li>
 	  <li><a href="#">About</a></li>
 	  <li><a href="#">Contact</a></li>
 	  <li id="signupli"><a class="signUp" href="#">Sign Up</a></li>
@@ -42,7 +42,7 @@
     
     <div class="parallax3" style="text-align:right;">
     	<h1 class="panel3Header">How It Works</h1>
-     	 <p class="secondP">
+     	 <p class="thirdP">
      	 	Based on their profile, student-athletes are matched with an appropriate mentor.
      	 	Daily data is gathered on each student-athlete, which is analyzed by and discussed with their mentor.
      	 </p>
