--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,3 +5,4 @@
 <script src="https://code.highcharts.com/highcharts.js" type="text/javascript"></script>
 <script src="https://code.highcharts.com/modules/exporting.js" type="text/javascript"></script>
 <script src="https://code.highcharts.com/modules/offline-exporting.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
