--- a/public/stylesheets/loginpage.css
+++ b/public/stylesheets/loginpage.css
@@ -1,7 +1,7 @@
 body {
     vertical-align: middle;
-    background-color:#64B3DF;
-    font-family: Futura, serif;
+    background-color:black;
+    font-family: 'Oswald', sans-serif;
 }
 
 #leftHeader {
@@ -9,7 +9,7 @@ body {
     text-align: center;
     margin:0;
     padding:0;
-    color:white;
+    color:#ECB342;
 }
 
 div.ex1 {
@@ -30,6 +30,7 @@ button {
     background-color: black;
     color: white;
     font-size: 15px;
+    font-family: 'Oswald', sans-serif;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
