--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -104,7 +104,7 @@ h2 {
 
 div.parallax {
     /* The image used */
-    background-image: url(http://www.biblestudynote.com/wp-content/uploads/2015/09/london-2012-summer-olympic-games-womens-100m-dash.jpg);
+    background-image: url(http://image3.redbull.com/rbcom/010/2014-11-03/1331688251595_9/0010/1/1500/1000/9/red-bull-400.jpg);
 
     /* Set a specific height */
     min-height: 500px;
@@ -134,7 +134,7 @@ div.parallax2 {
 
 div.parallax3 { 
 	    /* The image used */
-    background-image: url(http://wallpapercave.com/wp/0bWwqMI.png);
+    background-image: url(http://seattlerats.org/wp-content/uploads/2015/03/Soccer-Field-Night.jpg);
 
     /* Set a specific height */
     min-height: 350px;
