--- a/views/pages/loginpage.ejs
+++ b/views/pages/loginpage.ejs
@@ -7,6 +7,7 @@
       <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-app.js"></script>
       <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-auth.js"></script>
       <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-database.js"></script>  
+      <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
       
       <script>
       	// Initialize Firebase
@@ -96,10 +97,10 @@
     
     <!--<form id="loginForm" class="ex1" role="form" action="/dashboard" method="post">-->
     	<div id ="loginForm" class="ex1">
-			<label><b>Email</b></label>
+			<label style="color:white;"><b>Email</b></label>
 			<input type="text" placeholder="Enter Email" name="email" id="email" required>
 	
-			<label><b>Password</b></label>
+			<label style="color:white;"><b>Password</b></label>
 			<input type="password" placeholder="Enter Password" name="psw" id="psw" required>
 			<div style="text-align:center;">
 	 			<button id="submitButton" type="submit">Login</button>
