--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -23,17 +23,19 @@
   </head>
   <body>
   
+  	<div class="sidenav">
 	<ul class="sidenav">
-  		<li><a href="#Reflect" style="width:100%">Reflect</a></li>
-  		<li><a href="/dashboard" style="width:100%">Progress</a>
+  		<li><a href="#Reflect" style="width:100%; text-align: left;">Reflect</a></li>
+  		<li><a href="/dashboard" style="width:100%; text-align: left;">Progress</a>
   			<!--<ul>
   				<li>mama </li>
   				<li>papa </li>
   			</ul>-->	
   		</li>
-  		<li><a href="#Journal" style="width:100%">Journal</a></li>
-  		<li><button id="logOutButton" style="width:100%; text-align:center;">Log Out</button></li>
+  		<li><a href="#Journal" style="width:100%; text-align: left;">Journal</a></li>
+  		<li><button id="logOutButton" style="width:100%; text-align: left;">Log Out</button></li>
 	</ul>
+	</div>
 	<!--
         <nav>
             <ul>
