--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,9 +8,10 @@
     <header>
       <nav>
 	<ul>
-	  <li><a id="leftHeaderli" href="/"><h1 id="leftHeader">MENT2Reach</h1></a></li>
-	  <li><a href="#">About</a></li>
-	  <li><a href="#">Contact</a></li>
+	  <li><a id="leftHeaderli" href="/"><h1 id="leftHeader"></h1></a></li>
+	  <li><button id="aboutButton" style="width:100%;">About</button></li>
+	  <li><button id="processButton" style="width:100%;">Our Process</button></li>
+	  <li><button id="samplesButton" style="width:100%;">Sample Profiles</button></li>
 	  <li id="signupli"><a class="signUp" href="#">Sign Up</a></li>
 	  <li id="loginli"><a href="/loginpage">Log In</a></li>
 	</ul>
@@ -33,10 +34,10 @@
     <!--<% include ../partials/nav.ejs %>-->
     <div class="parallax2" style="text-align:left;">
 
-    	<h1 class="panel2Header" style="text-align:left;">Our Mission</h1>
-     	 <p class="secondP"> As a resourceful community of experienced collegiate student-athletes, we 
-				strive to help high school and community college student-athletes optimize 
-				their academic and athletic potential through personalized peer mentoring.</p>
+    	<h1 class="panel2Header" style="text-align:left;">The Mission</h1>
+     	 <p class="secondP"> Believing that all student-athletes are meant to reach their potentials and recognizing the various social and 
+     	 					cultural barriers that may obstruct their progression, we are committed to mentor each of our student-athletes to
+     	 					 accelerate academic, athletic, & personal growth.</p>
 				
     </div>
     
