added auto scroll functionality to buttons on main page

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -56,6 +56,30 @@
      	 	UC Berkeley, Cal Poly SLO, Wesleyan University, City College of San Francisco.
      	 </p>
     </div>
+    
+    <script>
+    	$("#aboutButton").click(function() {
+    		console.log("mango");
+   			$('html,body').animate({
+        		scrollTop: $(".parallax2").offset().top
+        	},
+        	'slow');
+		});
+		$("#processButton").click(function() {
+    		console.log("mango");
+   			$('html,body').animate({
+        		scrollTop: $(".parallax3").offset().top
+        	},
+        	'slow');
+		});
+		$("#samplesButton").click(function() {
+    		console.log("mango");
+   			$('html,body').animate({
+        		scrollTop: $(".parallax4").offset().top
+        	},
+        	'slow');
+		});
+    </script>
 
 
 
