changed grey color

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -35,9 +35,9 @@
     <div class="parallax2" style="text-align:left;">
 
     	<h1 class="panel2Header" style="text-align:left;">The Mission</h1>
-     	 <p class="secondP"> Believing that all student-athletes are meant to reach their potentials and recognizing the various social and 
-     	 					cultural barriers that may obstruct their progression, we are committed to mentor each of our student-athletes to
-     	 					 accelerate academic, athletic, & personal growth.</p>
+     	 <p class="secondP"> <font color="white">Believing that all student-athletes are</font> <strong><i>meant to reach</i></strong> <font color="white">their potentials and recognizing the various social and 
+     	 					cultural barriers that may obstruct their progression, we are committed to </font><i>mentor each</i><font color="white"> of our student-athletes to
+     	 					 accelerate academic, athletic, & personal growth.</font></p>
 				
     </div>
     
@@ -59,21 +59,18 @@
     
     <script>
     	$("#aboutButton").click(function() {
-    		console.log("mango");
    			$('html,body').animate({
         		scrollTop: $(".parallax2").offset().top
         	},
         	'slow');
 		});
 		$("#processButton").click(function() {
-    		console.log("mango");
    			$('html,body').animate({
         		scrollTop: $(".parallax3").offset().top
         	},
         	'slow');
 		});
 		$("#samplesButton").click(function() {
-    		console.log("mango");
    			$('html,body').animate({
         		scrollTop: $(".parallax4").offset().top
         	},
