removed millions suffix

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -219,7 +219,7 @@
             		}
         		},
         		tooltip: {
-            		valueSuffix: ' millions'
+            		valueSuffix: '%'
         		},
         		plotOptions: {
             		bar: {
