--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -10,6 +10,9 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #212121;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 li {
