--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
     </header>
     <!--<div class="parallax"><div>-->
     <!--<div class="parallax2"><div>-->
-    <div class = "parallax">
+    <div class = "parallax" style="margin-top:80px;">
       <p class = "topP">
 		Helping Student Athletes Achieve Maximum Athletic and Academic Potential
       </p>
