fixed auto-scroll on main page

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -60,19 +60,19 @@
     <script>
     	$("#aboutButton").click(function() {
    			$('html,body').animate({
-        		scrollTop: $(".parallax2").offset().top
+        		scrollTop: $(".parallax2").offset().top-80
         	},
         	'slow');
 		});
 		$("#processButton").click(function() {
    			$('html,body').animate({
-        		scrollTop: $(".parallax3").offset().top
+        		scrollTop: $(".parallax3").offset().top-80
         	},
         	'slow');
 		});
 		$("#samplesButton").click(function() {
    			$('html,body').animate({
-        		scrollTop: $(".parallax4").offset().top
+        		scrollTop: $(".parallax4").offset().top-80
         	},
         	'slow');
 		});
